adds function to get id contract address
